# conways-game-of-life

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  brun_linux.sh  brun_windows.bat
src/: main.c
